network/cilium/resources/hubble-ui-gateway-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: consolidated-gateway
      namespace: gateway
  hostnames:
    - hubble.k8s.example.com
    - hubble.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: hubble-ui
          port: 80
          weight: 1
